Changelog for mk-kill:

   * Removed option --[no]only-oldest (issue 1221).
   * Removed option --all-but-oldest (issue 1221).
   * Added option --victims (issue 1221).
   * Group and matching logic was incorrect (issue 1221).
   * Added option --any-busy-time.
   * Tool crashed if connection to be killed was already gone.

2010-12-11: version 0.9.8

   * Removed --iterations option.
   * Changed --run-time behavior to match other tools.
   * Added options --sentinel and --stop.
   * Added more --heartbeat messages.

2010-09-11: version 0.9.7

   * Slave replication threads in "init" or "end" state were killed (issue 1121)

2010-06-08: version 0.9.6

   * Connections did not preserve server SQL modes (issue 801).

2010-05-03: version 0.9.5

   * Replication threads were allowed to match by default (issue 853).
   * Added --replication-threads (issue 853).
   * Added --all (issue 853).

2010-04-01: version 0.9.4

   * Added DSN OPTIONS section to POD (issue 55).

2010-02-01: version 0.9.3

   * Added --kill-query (issue 750).

2010-01-06: version 0.9.2

   * The script crashed immediately on some OS or versions of Perl (issue 733).

2009-10-30: version 0.9.1

   * --set-vars did not work (issue 597).
   * Command line options did not override config file options (issue 617).

2009-09-30: version 0.9.0

   * Initial release.